Changelog
=========

2.1 (unreleased)
================

- anonymous users can book again [alert]
- autoinclude dependencies zcml [alert]
- use captchas for anonymous users [alert]
- upgrade step for installing `quintagroup.formlib.captcha`__ [alert]
- removed customized createObject view [alert]

__ http://plone.org/products/quintagroup.formlib.captcha

2.0 (2013-05-03)
================

- Plone 4 support added [cekk]
- Added Site Administrator role in rolemap and workflows [cekk]
- Fixed translation for month in folder view [cekk]
- Fixed mailhost send method (removed securesend) [cekk]
- Created new event raised when a booking is rescheduled [cekk]
- Added new contentrule that notify an user when his booking has re-scheduled [cekk]
- Added locales support [cekk]
- Fixed layout styles and accessibility [keul]
- Do not show reservation object in navigation [keul]
- Removed useless portal_skins elements [keul]
- Removed bad ploneCustom.css css, moved to a dedicated CSS [keul]
- Content types are now in english and translated [keul]
- PrenotazioniFolder end date is not required anymore
  (folder can now never expire) [keul]
- Can't booking in past slots anymore [keul]
- Addable types filtered [keul]
- Removed use of the SESSION object for saving booking date [keul]
- Removed workflow for ``PrenotazioniFolder``; use default ones [keul]
- removed hard-coded content rules, now we have a dependency on
  `collective.contentrules.mailfromfield`__ [keul]
- Removed the need of an additional date index: now we use ``Date`` [keul]
- Removed totally useless viewlets [keul]
- On Plone 3, switched to LargePloneFolder. **Warning**: this change
  will totally brake old 1.x installation on Plone 3.
- Added ``futureDays`` field and feature [keul]
- Changes to *prenotazioni_workflow*: removed useless permissions [keul]

__ http://plone.org/products/collective.contentrules.mailfromfield

1.0.2 (2012/09/07)
==================

- Minor fixes for public release

1.0.1 (2012/01/24)